k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wins-assist
  namespace: wins-assist
  labels:
    app: wins-assist
spec:
  type: ClusterIP
  selector:
    app: wins-assist
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
